@@ -80,7 +80,7 @@ The blob length in number of bytes.
 <P></P></DL></DL>
 <P>
 <H2><A NAME="setmagickregistry">SetMagickRegistry</A></H2>
-<blockquote>SetMagickRegistry ( ) sets a blob into the registry and returns a unique ID.If an error occurs, an ID of -1 is returned.; </blockquote><P>The format of the SetMagickRegistry method is:</P>
+<blockquote>SetMagickRegistry ( ) sets a blob into the registry and returns a unique ID.If an error occurs, -1 is returned.; </blockquote><P>The format of the SetMagickRegistry method is:</P>
 <blockquote>long SetMagickRegistry ( const void *blob, const size_t length, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows:</P>
 <DL><DL>
